rendered/envs/demo/authelia/statefulset-authelia.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authelia
    app.kubernetes.io/version: 4.38.16
    helm.sh/chart: authelia-0.9.16
  name: authelia
spec:
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  serviceName: authelia
  template:
    metadata:
      annotations:
        authelia.com/checksum-config: f647237e2cc299b468fa7adeb1ac067772489512784310905f332010f2b07b3f
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: authelia
        app.kubernetes.io/version: 4.38.16
        helm.sh/chart: authelia-0.9.16
    spec:
      affinity:
        nodeAffinity: {}
        podAffinity: {}
        podAntiAffinity: {}
      containers:
        - command:
            - authelia
          image: ghcr.io/authelia/authelia:4.38.16
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: authelia
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
            - containerPort: 9959
              name: metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: 155Mi
            requests:
              cpu: 0.25
              memory: 150Mi
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: authelia
              readOnly: false
            - mountPath: /configuration.yaml
              name: config
              readOnly: true
              subPath: configuration.yaml
            - mountPath: /secrets/internal
              name: secrets
              readOnly: true
            - mountPath: /secrets/authelia-db-app
              name: secret-authelia-db-app
              readOnly: true
            - mountPath: /secrets/authelia-users
              name: secret-authelia-users
              readOnly: true
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      volumes:
        - name: authelia
          persistentVolumeClaim:
            claimName: authelia
        - configMap:
            items:
              - key: configuration.yaml
                path: configuration.yaml
            name: authelia
          name: config
        - name: secrets
          secret:
            items:
              - key: identity_validation.reset_password.jwt.hmac.key
                path: identity_validation.reset_password.jwt.hmac.key
              - key: session.encryption.key
                path: session.encryption.key
              - key: notifier.smtp.password.txt
                path: notifier.smtp.password.txt
              - key: storage.encryption.key
                path: storage.encryption.key
            secretName: authelia
        - name: secret-authelia-db-app
          secret:
            items:
              - key: password
                path: storage.postgres.password.txt
            secretName: authelia-db-app
        - name: secret-authelia-users
          secret:
            items:
              - key: users_database.yaml
                path: users_database.yaml
            secretName: authelia-users
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
