rendered/envs/demo/authelia/service-authelia.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authelia
    app.kubernetes.io/version: 4.38.16
    helm.sh/chart: authelia-0.9.16
  name: authelia
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9959
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  sessionAffinity: None
  type: ClusterIP
